# Bot-Chatting

./: .editorconfig  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  BUILDING.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  hello.py  project_blueprint.excalidraw  pyproject.toml
alembic/: env.py
alembic/versions/: 246426a8952d_create_account_table.py
app/: main.py
app/api/v1/endpoints/: auth.py
app/core/config/: local.py
backend/: Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 246426a8952d_create_account_table.py
backend/docs/catalog-of-terms/Aggregate-DDD/: aggregate-ddd.puml
backend/docs/concepts/: c4-diagram-guide.md  ddd-architecture-guide.md
backend/docs/diagrams/c4/: c1_system_context.puml  c2_container.puml
backend/docs/guides/: GIT_WORKFLOW.md
backend/docs/modeling/: c1-system-context.md  c2-container.md
backend/docs/processes/: BUILDING.md
backend/src/: entrypoint.sh  initializer.py  run.py  server.py
backend/src/api/: main.py  routing.py
backend/src/building_blocks/: __init__.py
backend/src/building_blocks/application/: command.py  query.py
backend/src/building_blocks/domain/: __init__.py  aggregate_root.py  entity.py  enums.py  events.py  exceptions.py  result.py  rule.py  value_object.py
backend/src/building_blocks/infrastructure/: __init__.py  event_bus.py
backend/src/database/: models.py  session.py
backend/src/database/configuration/: containers.py  startup.py
backend/src/modules/: initializer.py
backend/tests/: conftest.py
backend/tests/chats/messages/: test_content.py
doc/graphs/: project_blueprint.excalidraw  workspace.dsl
docs/: README.md
docs/building/: backend.md  docker.md  frontend.md  setup.md
docs/concepts/: c4-diagram-guide.md
docs/ddd/: implementation.md  resources.md
docs/design/: architecture.md
docs/diagrams/c4/: c1_system_context.puml
docs/features/: auth.md  conversations.md
docs/modeling/: c1-system-context.md
docs/others/: visualization.md
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  metadata.json  next-dev.d.ts  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/chat/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/api/_lib/: backend.ts
frontend/app/api/chat/: route.ts
frontend/app/api/conversations/: route.ts
frontend/app/api/send/: route.ts
frontend/app/api/stream/: route.ts
frontend/app/api/title/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: AuthForm.tsx  AuthPage.tsx  ChatInterface.tsx  ChatPage.tsx  ChatWindow.tsx  Composer.tsx  DashboardShell.tsx  Layout.tsx  NavBar.tsx  SettingsForm.tsx  SettingsPage.tsx
frontend/context/: AppContext.tsx
frontend/lib/: auth.ts  sse.ts
frontend/public/: tailwind.css
frontend/services/: chatService.ts
infra/nginx/: default.dev.conf
nginx/: default.prod.conf
src/: Dockerfile  backend_entrypoint.sh  entrypoint.sh  main.py  run.py
src/API/: api_entrypoint.sh  app.py  entrypoint.sh  main.py  startup.py
src/API/core/: response.py
src/API/core/config/: base.py  dev.py  logging.py  prod.py
src/API/core/exceptions/: errors.py  schemas.py
src/API/core/responses/: schemas.py
src/API/core/utils/: import_helpers.py  routing.py
src/API/modules/chats/: di.py
src/API/rest/routers/: __init__.py
src/API/routers/: __init__.py
src/accounts/application/authentication/: __init__.py  command.py
src/accounts/application/contract/: mappers.py
src/accounts/application/managment/: command.py  query.py
src/accounts/application/password/: exceptions.py
src/accounts/domain/: service.py
src/accounts/domain/model/: exceptions.py  factories.py  repository.py  root_entity.py  value_objects.py
src/accounts/infrustructure/db/: database.py
src/accounts/infrustructure/password/: hasher.py
src/ai/application/service/: generation.py  tokenization.py
src/ai/infra/pipe/: generator.py  preprocessor.py  response_generator.py  runner.py  stage.py  validator.py
src/api/: main.py
src/auth/: router.py
src/building_blocks/application/: __init__.py  bus.py  command.py  query.py
src/building_blocks/domain/: domain_event.py  entity.py  enums.py  events.py  exception.py  exception_deprecated.py  identifier.py  result.py  rule.py  value_object.py
src/building_blocks/infrastructure/: outbox.py  pipeline.py  unit_of_work.py
src/chat/domain/: exceptions.py  result_model.py
src/chat/infra/: di.py  di_container.py
src/chat/tests/: test_converstaion.py  test_feedback.py  test_message.py
src/common/infra/: di_container.py
src/core/config/: __init__.py  base.py  local.py
src/core/dto/: user.py  utils.py
src/database/: Dockerfile  __init__.py  alembic.ini  context.py  db_entrypoint.sh  entrypoint.sh  manager.py  model.py  setup.py
src/database/conf/: connector.py  manager.py
src/database/connection/: __init__.py  aws_connector.py  azure_connector.py  connector.py  manager.py  postgres_connector.py  sqlite_connector.py
src/database/engines/: __init__.py  aws_connector.py  azure_connector.py  postgres_connector.py  sqlite_connector.py
src/database/models/: __init__.py  base.py  manager.py  model.py  user.py
src/domain/primitive/: entity.py  identifier.py  result.py  value_object.py
src/fastapi/: main.py  router_setup.py
src/fastapi/utils/: import_helpers.py
src/modules/: initialize_module.py  utils.py
src/modules/accounts/: __init__.py
src/schemas/: auth_schema.py
src/shared/domain/: entity.py  result.py  value_object.py
src/shared/infrustructure/: config.py  di_container.py
src/shared/utils/: helpers.py
src/templates/: index.html
templates/: index.html
tests/chats/conversations/: test_converstaion.py
(+632 files in other folders)
