[project]
name = "bot-chating"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.44.0",
    "fastapi>=0.115.6",
    "fastapi-cli>=0.0.6",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "returns>=0.24.0",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
lint = ["ruff>=0.8.3"]
dev = ["colorlog>=6.9.0", "pre-commit>=4.0.1"]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
]


[tool.ruff]
line-length = 119
extend-ignore = [
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # indent-with-spaces
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
]


[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20


# ==== pytest ====
[tool.pytest.ini_options]
# addopts = "-v --tb=short"
testpaths = ["src"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"
